<resources>
    <string name="app_name">GamesBrowser</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_my_lists">My Games</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_games_please_wait">Loading games... please wait</string>
    <string name="platforms">Platforms</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="genres">Genres:</string>
    <string name="platforms_rv">Platforms:</string>
    <string name="themes">Themes:</string>
    <string name="check_game_reviews">CHECK GAME REVIEWS</string>
    <string name="screenshots">Screenshots:</string>

    <string name="cover_url">https://images.igdb.com/igdb/image/upload/t_cover_big/</string>
    <string name="screenshot_url">https://images.igdb.com/igdb/image/upload/t_screenshot_med/</string>
    <string name="want">WANT</string>
    <string name="playing">PLAYING</string>
    <string name="played">PLAYED</string>
    <string name="search_your_game">Search your game</string>
    <string name="time_to_beat">Time to beat</string>
    <string name="game_modes">Game modes:</string>
    <string name="not_applicable">N/A</string>
    <string name="need_more_ratings">Need more ratings</string>
    <string name="filter">FILTER</string>
    <string name="videos">Videos:</string>
    <string name="positive_points">Positive points</string>
    <string name="negative_points">Negative points</string>
    <string name="there_are_no_available_reviews_at_the_moment">There are no available reviews at the moment</string>
    <string name="reviews">Reviews</string>
    <string name="recently_visited_games">Recently visited games</string>
    <string name="popular_genres">Popular genres</string>
    <string name="similar_games">Similar games</string>
    <string name="my_lists">MY LISTS</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="recommended_games">Recommended games</string>
    <string name="coming_soon">Coming soon</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="clear_searches">CLEAR</string>

</resources>
