<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SearchFragment">

    <EditText
        android:id="@+id/search_games_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_search"
        android:backgroundTint="@color/button_blue"
        android:maxLines="2"
        android:drawablePadding="10dp"
        android:hint="@string/search_your_game"/>

    <TextView
        android:id="@+id/search_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/button_blue"
        android:textStyle="italic|bold"
        android:layout_marginRight="10dp"
        android:layout_below="@id/search_games_et"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"/> <!-- TO BE MADE VISIBLE -->

    <RelativeLayout
        android:id="@+id/clear_searches_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_filter"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_searches"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/text_black"/>

        <Button
            android:id="@+id/clear_searches_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_searches"
            android:textColor="@color/text_white"
            android:background="@color/button_blue"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_below="@id/clear_searches_layout"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>

    <include layout="@layout/games_progress_bar"
        android:id="@+id/progress_bar_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>