<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/borders_background">

    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="REVIEW TITLE"
        android:textColor="@color/text_black"
        android:padding="5dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        tools:text="@string/lorem_ipsum"/>

    <LinearLayout
        android:id="@+id/review_points_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/positive_points"
                android:textColor="@color/positive_points_color"
                android:gravity="center"/>

            <TextView
                android:id="@+id/positive_points"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                tools:text="POSITIVE"
                android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/negative_points"
                android:textColor="@color/negative_points_color"
                android:gravity="center"/>

            <TextView
                android:id="@+id/negative_points"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                tools:text="NEGATIVE"
                android:padding="3dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/review_conclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        tools:text="@string/lorem_ipsum"/>

</LinearLayout>